<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/start_button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:color="@android:color/darker_gray"
            android:padding="16dp"
            android:text="@string/start_game"
            android:textColor="#DD4814"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_game_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/score"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initial_score"
                android:textColor="#DD4814"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/timer"
                android:textColor="#DD4814"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="100sp" />


        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            app:columnCount="4">

            <Button
                android:id="@+id/button1"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                android:text="@string/three" />

            <Button
                android:id="@+id/button11"
                android:text="@string/eleven" />

            <Button
                android:id="@+id/button4"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                android:text="@string/six" />

            <Button
                android:id="@+id/button12"
                android:text="@string/twelve" />

            <Button
                android:id="@+id/button7"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button13"
                android:text="@string/thirteen" />

            <Button
                android:id="@+id/button10"
                android:text="@string/ten"
                app:layout_columnSpan="3"
                app:layout_gravity="fill_horizontal" />

            <Button
                android:id="@+id/button14"
                android:text="@string/fourteen" />

        </android.support.v7.widget.GridLayout>


    </LinearLayout>
</LinearLayout>