<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="#DD4814"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_vertical">

        <ImageView
            android:id="@+id/landing_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            android:padding="16dp"
            android:src="@drawable/landing_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/landing_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp" />

        <Button
            android:id="@+id/tour_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_tour" />

    </LinearLayout>

</LinearLayout>
